2014-11-26  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: fix status.

2014-11-24  Jean-Louis Martineau <martineau@zmanda.com>
	* Makefile.am: 'cp -av' => 'cp -fpR'  ,-av are not valid on solaris.

2014-11-24  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c (amar_attr_add_data_fd_thread): Close the file
	  descriptor when there is nothing more to read from.
	* client-src/sendbackup.c (check_result): Fix a race bug. sendbackup
	  do not always report the exit status of the application.
	  Once amvmware close its socket, an immediate call to waitpid(-1,)
	  might not trap it exited.
	  The patch check all pid we forked until they exit (max 5 seconds),
	   after that they are killed.

2014-11-21  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Rest/Amanda/bin/app.pl.in: Convert request from utf-8 to
	  user locale.

2014-11-21  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Message.pm: Convert reply from user locale  to  utf-8.

2014-11-19  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/flags.m4: subst AMANDA_FILE_CFLAGS do that in generate
	  the basename of the file.
	* amandad-src/Makefile.am, amar-src/Makefile.am,
	  application-src/Makefile.am, client-src/Makefile.am,
	  common-src/Makefile.am, device-src/Makefile.am,
	  ndmp-src/Makefile.am, oldrecover-src/Makefile.am,
	  perl/Makefile.am, recover-src/Makefile.am,
	  server-src/Makefile.am, xfer-src/Makefile.am (AM_CFLAGS):
	  Add $(AMANDA_FILE_CFLAGS)
	* application-src/amgtar.c, client-src/client_util.c,
	  client-src/selfcheck.c, client-src/senddiscover.c,
	  common-src/conffile.c, server-src/amcheck.c: Use AMANDA_FILE in
	  build_message

2014-11-19  Jean-Louis Martineau <martineau@zmanda.com>
	* config/test-driver: New file for automake-1.14
	* config/missing, config/ylwrap, config/install-sh,
	  config/mkinstalldirs, config/depcomp, config/compile,
	  config/config.guess, config/config.sub: Update to automake-1.14
